--- a/sass/styles.css
+++ b/sass/styles.css
@@ -201,7 +201,7 @@ html, body {
 .benefits {
   background-color: #F7F7F7;
   padding-top: 3.3em;
-  padding-bottom: 7.3em;
+  padding-bottom: 2em;
 }
 .benefits__box {
   background-color: #FFFFFF;
@@ -209,57 +209,84 @@ html, body {
   border-radius: 0.3125rem;
   width: 90%;
   margin: 0 auto 3em auto;
-  max-height: 23em;
+}
+.benefits__box--be-always-first {
+  padding: 2em 1em 2em 1em;
+}
+.benefits__box--your-shop {
+  padding: 1em 1em 2em 1em;
+}
+.benefits__box--increase {
+  background-color: transparent;
+  border: none;
+  margin: 0 auto;
 }
 .benefits__box__image-container {
-  position: relative;
+  margin: 0 auto;
   text-align: center;
+  position: relative;
+  border: none;
+}
+.benefits__box__image-container--increase {
+  background-color: #F7F7F7;
+  border: none;
 }
 .benefits__box__image-container__image {
-  position: absolute;
-  left: 50%;
+  position: relative;
+  z-index: 1;
 }
-.benefits__box__image-container__image--laptop {
-  top: 2.5em;
-  transform: translateX(-50%);
+.benefits__box__image-container__image--phone-mobile {
+  left: 1.5em;
 }
-.benefits__box__image-container__image--phone {
-  top: 1.2em;
-  transform: translateX(-37%);
+.benefits__box__image-container__image--phone-desktop {
+  display: none;
 }
 .benefits__box__image-container__image--trumpet {
-  top: 5vh;
-  transform: translateX(-60%);
+  bottom: -2em;
+  left: -2em;
+}
+.benefits__box__image-container__bg {
+  position: absolute;
 }
 .benefits__box__image-container__bg--red-mobile {
-  padding: 1em 0 0 7em;
+  top: -17%;
+  left: 52%;
 }
 .benefits__box__image-container__bg--red-desktop {
   display: none;
 }
 .benefits__box__image-container__bg--blue {
-  padding-top: 0.8em;
+  top: -5%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .benefits__box__image-container__bg--green {
   width: 100%;
-  max-height: 20em;
+  max-height: 12em;
+  top: 0;
+  left: 0;
 }
-.benefits__box__text-container {
-  padding: 0 1em 2em 1em;
+.benefits__box__text-container--increase {
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #E8E9ED;
+  border-radius: 0.3125rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1em 1em 2em 1em;
 }
 .benefits__box__text-container__title {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 2rem;
   line-height: 2.1875rem;
-  padding-right: 1em;
-  padding-top: 1em;
+  width: 80%;
 }
 .benefits__box__text-container__title--be-always-first {
-  margin-top: 2em;
-  margin-bottom: 1em;
+  margin-top: 1em;
+  margin-bottom: 1.5em;
 }
 .benefits__box__text-container__title--your-shop {
+  margin-top: 0.6em;
   margin-bottom: 0.4em;
 }
 .benefits__box__text-container__subtitle {
@@ -277,41 +304,38 @@ html, body {
   display: none;
 }
 @media only screen and (min-width: 1000px) {
-  .benefits {
-    padding-bottom: 0.8em;
-  }
   .benefits__box {
-    max-width: none;
-    margin: 0 auto;
-    margin-bottom: 3.1em;
+    width: 70%;
+    padding: 4em 2em;
+    display: flex;
+    justify-content: center;
+    gap: 4em;
+  }
+  .benefits__box--be-always-first {
+    flex-direction: row-reverse;
   }
   .benefits__box--increase {
-    background-color: transparent;
-    border: none;
-    display: flex;
+    padding: 0;
   }
-  .benefits__box__image-container--increase {
+  .benefits__box__image-container {
+    width: 70%;
     margin: 0;
-    width: 40%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-  }
-  .benefits__box__image-container__image {
-    left: auto;
-    transform: none;
   }
   .benefits__box__image-container__image--laptop {
-    top: 10em;
-    right: 5em;
-    width: 30%;
-    max-width: 23em;
+    top: 2.5em;
+    left: 0em;
+    width: 80%;
+    max-width: 19em;
   }
-  .benefits__box__image-container__image--phone {
-    bottom: -13.5em;
-    left: 3.5em;
-    width: 24%;
-    max-width: 24em;
+  .benefits__box__image-container__image--phone-mobile {
+    display: none;
+  }
+  .benefits__box__image-container__image--phone-desktop {
+    display: block;
+    top: -1em;
+    left: 5em;
+    width: 80%;
+    max-width: 19em;
   }
   .benefits__box__image-container__image--trumpet {
     top: 50%;
@@ -330,16 +354,16 @@ html, body {
   }
   .benefits__box__image-container__bg--red-desktop {
     display: block;
-    bottom: -12.5em;
-    right: 3.5em;
-    width: 20%;
-    max-width: 16em;
+    top: 0;
+    left: 50%;
+    width: 48%;
+    max-width: 11em;
   }
   .benefits__box__image-container__bg--blue {
-    bottom: -13.5em;
-    left: 3.5em;
-    width: 20%;
-    max-width: 19em;
+    top: -2em;
+    left: 4em;
+    width: 65%;
+    max-width: 15em;
   }
   .benefits__box__image-container__bg--green {
     margin: 0;
@@ -347,59 +371,26 @@ html, body {
     height: 100%;
     position: relative;
   }
-  .benefits__box__text-container {
-    position: relative;
-  }
-  .benefits__box__text-container--your-shop {
-    position: absolute;
-    right: 10em;
-  }
   .benefits__box__text-container--increase {
-    padding-top: 2.5em;
-    margin: 0;
-    width: 60%;
-    height: 100%;
-    background-color: #FFFFFF;
-    border: 0.0625rem solid #E8E9ED;
-    border-radius: 0.3125rem;
+    padding: 4em 4em 0 2em;
+    width: 100%;
   }
-  .benefits__box__text-container__title {
-    margin-top: -0.5em;
-    max-width: 7em;
+  .benefits__box__text-container__title--be-always-first {
+    margin-bottom: 1em;
+  }
+  .benefits__box__text-container__title--your-shop {
+    margin-top: 0.6em;
+    margin-bottom: 0.4em;
   }
   .benefits__box__text-container__title--increase {
-    padding-top: 0.7em;
-    margin-top: 0;
-    max-width: 10em;
-  }
-  .benefits__box__text-container__subtitle {
-    width: 70%;
-    max-width: 26em;
+    width: 60%;
   }
   .benefits__box__text-container__subtitle--be-always-first {
     margin-top: 2em;
   }
-  .benefits__box__text-container__subtitle--your-shop {
-    width: 100%;
-  }
-  .benefits__box__text-container__subtitle--increase {
-    margin: 0.7em 1.2em;
-    padding-top: 0.7em;
-    font-size: 1rem;
-    line-height: 1.3125rem;
-  }
   .benefits__box__text-container__line {
-    width: 40%;
-    max-width: 18em;
     display: block;
-    margin: 0 0 4em 1.3em;
-  }
-  .benefits__box__text-container__line--your-shop {
-    width: 100%;
-  }
-  .benefits__box__text-container__line--increase {
-    padding-top: 1em;
-    width: 100%;
+    margin-top: 2em;
   }
 }
 
@@ -681,7 +672,7 @@ html, body {
   box-shadow: rgba(0, 0, 0, 0.2) 0px -5px 40px 0px;
   background-color: #F7F7F7;
   position: relative;
-  padding-left: 1em;
+  padding: 1em;
 }
 .footer__title {
   font-family: "Raleway", sans-serif;
@@ -690,7 +681,6 @@ html, body {
   line-height: 1.875rem;
   word-spacing: 0.125rem;
   color: #08A6E4;
-  padding-top: 1em;
 }
 .footer__subtitle {
   font-family: "Raleway", sans-serif;
@@ -699,17 +689,14 @@ html, body {
   line-height: 0.875rem;
   word-spacing: 0.125rem;
   color: #A5A5A5;
-  padding-bottom: 1.8em;
 }
 .footer__icons {
   position: absolute;
-  top: 2.1em;
-  right: 0;
+  top: 50%;
+  right: 5%;
+  transform: translateY(-50%);
 }
 .footer__icons__twitter {
-  margin-right: 1em;
-}
-.footer__icons__facebook {
   margin-right: 1em;
 }
 @media only screen and (min-width: 1000px) {
